# ai-security

./: .gitignore  .pre-commit-config.yaml  Makefile  cli.py  convert-to-csv.py  pyproject.toml  untitled.md
.github/workflows/: ci.yml
ai-sec-workbench/data/processed/: advbench.csv  advbench.parquet
data/clusters/: Manual Cluster Inspection.numbers  clusters.parquet  noise_review_eps_0.20.md  noise_review_eps_0.30.md  noise_review_eps_0.50.md
docs/: cluster-tuning.md  dedup-findings.md  week-1-notes.md  week-2-notes.md
docs/decisions/: 001-dataset-selection.md  002-registry-mental-model.md  002-schema-design.md  004-registry-design-notes.md  005-coversge-dimension.md
notebooks/: 01-first-embeddings.ipynb  02-umap-analysis.ipynb  03-cluster-inspection.ipynb  temp.ipynb
notebooks/.ipynb_checkpoints/: 01-first-embeddings-checkpoint.ipynb
notebooks/demos/: 00-week1-demo.ipynb  00-week1-demo.py  01-week2-demo.ipynb
notebooks/demos/.ipynb_checkpoints/: 01-week2-demo-checkpoint.ipynb
src/: __init__.py
src/analytics/: coverage_analysis.py
src/cluster/: __main__.py  analysis.py  cluster.py  noise-analysis.py  quality.py  tune.py
src/embed/: __main__.py  dedup.py  embed.py  search.py  visualize.py
src/ingest/: __main__.py  ingest.py  schema.py
src/registry/: label_attacks.py
src/registry/candidates/: behaviors.yaml  cluster_assignments.yaml  cluster_to_primitive.yaml  primitives.yaml
tests/: test_hello.py  test_schema.py  test_search.py
