[project]
name = "ai-sec-workbench"
version = "0.1.0"
description = "A workbench for AI security research and red-teaming LLMs"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "pydantic>=2.0",
    "datasets>=2.0",
    "sentence-transformers>=3.0",
    "typer>=0.25.1",
    "pyarrow>=24.0.0",
    "faiss-cpu>=1.13.2",
    "numpy>=2.4.4",
    "umap-learn>=0.5.12",
    "plotly>=6.7.0",
    "hdbscan>=0.8.43",
    "matplotlib>=3.10.9",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "pre-commit>=3.0",
    "ipykernel>=7.2.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["notebooks/"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[projects.scripts]
asw = 'src.cli:app'
